# eval-reliability-sketch

./: README.md  pyproject.toml
eval_reliability/: __init__.py  __main__.py  abstention.py  dataset.py  judge.py  reliability.py  systems.py
tests/: test_abstention.py  test_dataset.py  test_judge_exclusion.py  test_no_company_names.py  test_reliability_decay.py
